src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Enterprise_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CRM-MC-ESPSFDCQI-2624</description>
        <label>Enterprise Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Volume_of_Work__c</fullName>
        <description>ESPSFDCQI-12057</description>
        <inlineHelpText>Estimated words to be translated</inlineHelpText>
        <label>Estimated Volume of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EvidenceStrategy_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ESPSFDCQI-7429/ESPSFDCQI-9090</description>
        <label>Evidence Strategy Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IQVIA_User_Contact</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Evidence Strategy Lead)</relationshipLabel>
        <relationshipName>OpportunitiesESL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Finance__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3535</description>
        <formula>Min_Value_OLI__c &lt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude From Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_IQVIA_Quote_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ESPSFDCQI-17609</description>
        <inlineHelpText>When checked Sync IQVIA Quote to Opportunity functionality will be skipped.</inlineHelpText>
        <label>Exclude IQVIA Quote Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Pricing_Assistant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Opportunity will NOT enforce any Pricing Assistant functionality.</description>
        <inlineHelpText>When checked, the Opportunity will NOT enforce any Pricing Assistant functionality.</inlineHelpText>
        <label>Exclude from Pricing Assistant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <description>MC-CRM-ESPSFDCQI-2690 -</description>
        <label>Executive Sponsor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expect_ATP_or_WO_in_Awarded_Qtr__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2690 -</description>
        <label>Expect ATP or WO in Awarded Qtr?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Path_Probability__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very Likely</fullName>
                </value>
                <value>
                    <fullName>Somewhat Likely</fullName>
                </value>
                <value>
                    <fullName>Not Likely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Project_End_Date__c</fullName>
        <description>MC-CRM-ESPSFDCQI-2690 -</description>
        <label>Expected Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Project_Start_Date__c</fullName>
        <description>MC-CRM-ESPSFDCQI-2690 -</description>
        <label>Expected Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exploratory_Predictive_Biomarker_Testing__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3144 -</description>
        <label>Exploratory Predictive Biomarker Testing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension_Continuation_Part_of_Progam__c</fullName>
        <description>MC-CRM-ESPSFDCQI-2692 -</description>
        <label>Extension/Continuation/Part of Progam</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                </value>
                <value>
                    <fullName>Part of Program</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPI_Date__c</fullName>
        <description>MC_CRM_ESPSFDCQI-55</description>
        <label>FPI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FR_Opp_Close_date__c</fullName>
        <description>CRM-MC-ESPSFDCQI-368</description>
        <formula>IF( 
RD_Product_Count__c == 0, 
IF( ISBLANK(Actual_Close_Date__c),CloseDate, Actual_Close_Date__c ), 
IF( ISBLANK(Awarded_Date__c) ,CloseDate, Awarded_Date__c ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Reporting Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSP_BD_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MC-CRM-ESPSFDCQI- 2690 -</description>
        <label>FSP BD Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IQVIA_User_Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity(FSP BD Lead)</relationshipLabel>
        <relationshipName>Opportunities11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSP_Duration__c</fullName>
        <description>MC-CRM-ESPSFDCQI- 2690 -</description>
        <label>FSP Duration</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FSP__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>6 Years</fullName>
                </value>
                <value>
                    <fullName>7 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSP_Function__c</fullName>
        <description>MC-CRM-ESPSFDCQI- 2690 -</description>
        <label>FSP Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FSP__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BIOS</fullName>
                </value>
                <value>
                    <fullName>Central Monitoring</fullName>
                </value>
                <value>
                    <fullName>Clinical Monitoring (CFSP)</fullName>
                </value>
                <value>
                    <fullName>CSG</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
                <value>
                    <fullName>Feasibility</fullName>
                </value>
                <value>
                    <fullName>GCE Solutions</fullName>
                </value>
                <value>
                    <fullName>Medical and Scientific Services (MSS)</fullName>
                </value>
                <value>
                    <fullName>MW</fullName>
                </value>
                <value>
                    <fullName>Patient Recruitment</fullName>
                </value>
                <value>
                    <fullName>PhV</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>RSU (Site Start-up)</fullName>
                </value>
                <value>
                    <fullName>Site ID</fullName>
                </value>
                <value>
                    <fullName>Stats Programming</fullName>
                </value>
                <value>
                    <fullName>Study Management</fullName>
                </value>
                <value>
                    <fullName>Translations</fullName>
                </value>
                <value>
                    <fullName>Commercial Services</fullName>
                    <isActive>false</isActive>
                    <label>Commercial Services</label>
                </value>
                <value>
                    <fullName>Connected Devices</fullName>
                    <isActive>false</isActive>
                    <label>Connected Devices</label>
                </value>
                <value>
                    <fullName>Lab</fullName>
                    <isActive>false</isActive>
                    <label>Lab</label>
                </value>
                <value>
                    <fullName>MPM</fullName>
                    <isActive>false</isActive>
                    <label>MPM</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Ph I</fullName>
                    <isActive>false</isActive>
                    <label>Ph I</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSP_Resources__c</fullName>
        <description>ESPSFDCQI-5831</description>
        <inlineHelpText>Headcounts, roles and geographies when possible</inlineHelpText>
        <label>FSP Resources</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSP__c</fullName>
        <description>MC-CRM-ESPSFDCQI- 2690 -</description>
        <label>FSP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feasibility_Enrollment_Goal_Sum__c</fullName>
        <description>ESPSFDCQI-16396,ESPSFDCQI-17128</description>
        <inlineHelpText>Sum of Site Submissions excluding those Awarded, Lost, On hold or Withdrawn</inlineHelpText>
        <label>Feasibility Enrollment Goal Sum</label>
        <summarizedField>Site_Submission__c.Feasibility_Enrollment_Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Site_Submission__c.Status__c</field>
            <operation>equals</operation>
            <value>Submitted, FQ Received, FQ Submitted, PSV Requested, PSV Scheduled, PSV Complete, Selected</value>
        </summaryFilterItems>
        <summaryForeignKey>Site_Submission__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Field_BD_transfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CRM-MC-ESPSFDCQI-3144 - Cust</description>
        <label>Field BD transfer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities_Field_BD_transfer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Focus_Area__c</fullName>
        <description>ESPSFDCQI-12285</description>
        <label>Focus Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>R&amp;D: Discovery - Gene Disease &amp; Biomarker</fullName>
                </value>
                <value>
                    <fullName>R&amp;D: Clinical - Clinical trial design &amp; analytics</fullName>
                </value>
                <value>
                    <fullName>R&amp;D: Multimission</fullName>
                </value>
                <value>
                    <fullName>R&amp;D: Other</fullName>
                </value>
                <value>
                    <fullName>SRQ: Safety</fullName>
                </value>
                <value>
                    <fullName>SRQ: Regulatory</fullName>
                </value>
                <value>
                    <fullName>SRQ: Safety Intelligence Hub</fullName>
                </value>
                <value>
                    <fullName>SRQ: Labeling Intelligence Hub</fullName>
                </value>
                <value>
                    <fullName>SRQ: Other</fullName>
                </value>
                <value>
                    <fullName>M&amp;C: Medical Affairs - Literature Search &amp; Extraction</fullName>
                </value>
                <value>
                    <fullName>M&amp;C: Medical Affairs - VoC, MSL Notes, &amp; Social Intelligence</fullName>
                </value>
                <value>
                    <fullName>M&amp;C: Medical Affairs - Medical Intelligence Hub</fullName>
                </value>
                <value>
                    <fullName>M&amp;C: Commercial - Social Intelligence</fullName>
                </value>
                <value>
                    <fullName>M&amp;C: Medical Affairs - Other</fullName>
                </value>
                <value>
                    <fullName>M&amp;C: Commercial - Other</fullName>
                </value>
                <value>
                    <fullName>HC: Government - Population Health Coding</fullName>
                </value>
                <value>
                    <fullName>HC: Healthcare IT - Cancer phenotyping &amp; Lab normalization</fullName>
                </value>
                <value>
                    <fullName>HC: Healthcare IT - Population Health Coding</fullName>
                </value>
                <value>
                    <fullName>HC: Healthcare IT - HCC Coding</fullName>
                </value>
                <value>
                    <fullName>HC: Payor-provider - HCC Coding</fullName>
                </value>
                <value>
                    <fullName>HC: Payor-provider - Phenotyping disease progression</fullName>
                </value>
                <value>
                    <fullName>HC: Payor-provider - Population Health Coding</fullName>
                </value>
                <value>
                    <fullName>HC: Payor-provider - Multimission</fullName>
                </value>
                <value>
                    <fullName>HC: Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1302 - Custom field used to allow end users to update the Forecast Category field in Lightning Experience. Code updates the ForecastCategoryName field to mirror the picklist value selected.</description>
        <label>Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                    <default>true</default>
                    <label>Pipeline</label>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (From Opportunity)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Service__c</fullName>
        <description>ESPSFDCQI-11608</description>
        <inlineHelpText>This field is to indicate when multiple service lines are included, please refer to your business areas rules for when to set this value.</inlineHelpText>
        <label>Full Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Department_Agency__c</fullName>
        <description>ESPSFDCQI-12904</description>
        <label>Funding Department/Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HHS-NIH</fullName>
                </value>
                <value>
                    <fullName>HHS-Other</fullName>
                </value>
                <value>
                    <fullName>DoD</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Navy</fullName>
                </value>
                <value>
                    <fullName>Airforce</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>NASA</fullName>
                </value>
                <value>
                    <fullName>USAID</fullName>
                </value>
                <value>
                    <fullName>DHS</fullName>
                </value>
                <value>
                    <fullName>DOJ</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>BARDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GFL_Comments__c</fullName>
        <description>CRM-MC-ESPSFDCQI-889 - editable by permission set for NGCD group</description>
        <inlineHelpText>a Not relevant for the indication/TA 
b Not relevant for the country/region under strategy 
c Non NG GFL services requested 
d GFL support not required 
e Stronger data from another system 
f OLE/LTE study 
g RR/Comp landscape analysis only</inlineHelpText>
        <label>GFL Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GMI_Product_Amount__c</fullName>
        <description>CRM-MC-ESPSFDCQI-8232</description>
        <label>GMI Product Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Is_GMI_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GMI_Product_Count__c</fullName>
        <description>ESPSFDCQI-8355</description>
        <label>GMI Product Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Is_GMI_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GPM_to_be_located_in_specific_region__c</fullName>
        <description>MC-CRM-ESPSFDCQI-2692 -</description>
        <label>GPM to be located in specific region?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>America</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GRA_Lead_1__c</fullName>
        <description>ESPSFDCQI-6424</description>
        <label>GRA Lead 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRA_Lead_2__c</fullName>
        <description>ESPSFDCQI-6424</description>
        <label>GRA Lead 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRA_Services__c</fullName>
        <description>ESPSFDCQI-6424</description>
        <label>GRA Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reg Consulting</fullName>
                </value>
                <value>
                    <fullName>Submission Services</fullName>
                </value>
                <value>
                    <fullName>Designation Application</fullName>
                </value>
                <value>
                    <fullName>Life Cycle Maintenance</fullName>
                </value>
                <value>
                    <fullName>Publishing</fullName>
                </value>
                <value>
                    <fullName>RIM Data Maintenance Service</fullName>
                </value>
                <value>
                    <fullName>Labeling</fullName>
                </value>
                <value>
                    <fullName>MAT</fullName>
                </value>
                <value>
                    <fullName>CMC</fullName>
                </value>
                <value>
                    <fullName>RAO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSK_Competitive_Bid__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3144 - Q2 only - mandatory if account parent = gsk,ESPSFDCQI-17438</description>
        <label>Operational Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PD (Pharma Development included Roche and Genentech)</fullName>
                </value>
                <value>
                    <fullName>pRED</fullName>
                </value>
                <value>
                    <fullName>gRED</fullName>
                </value>
                <value>
                    <fullName>LMA</fullName>
                </value>
                <value>
                    <fullName>Roche DIA</fullName>
                </value>
                <value>
                    <fullName>Spark Therapeutics (is an Affiliate of Roche)</fullName>
                </value>
                <value>
                    <fullName>Bioavailability/Bioequivalence</fullName>
                    <isActive>false</isActive>
                    <label>Bioavailability/Bioequivalence</label>
                </value>
                <value>
                    <fullName>Biosimilar</fullName>
                    <isActive>false</isActive>
                    <label>Biosimilar</label>
                </value>
                <value>
                    <fullName>Combined Protocol (e.g. SAD/MAD)</fullName>
                    <isActive>false</isActive>
                    <label>Combined Protocol (e.g. SAD/MAD)</label>
                </value>
                <value>
                    <fullName>Drug-Drug Interaction</fullName>
                    <isActive>false</isActive>
                    <label>Drug-Drug Interaction</label>
                </value>
                <value>
                    <fullName>Ethnic Bridging</fullName>
                    <isActive>false</isActive>
                    <label>Ethnic Bridging</label>
                </value>
                <value>
                    <fullName>Multiple Ascending Dose (MAD)</fullName>
                    <isActive>false</isActive>
                    <label>Multiple Ascending Dose (MAD)</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Other Ph1 Study</fullName>
                    <isActive>false</isActive>
                    <label>Other Ph1 Study</label>
                </value>
                <value>
                    <fullName>Renal/Hepatic Impairment</fullName>
                    <isActive>false</isActive>
                    <label>Renal/Hepatic Impairment</label>
                </value>
                <value>
                    <fullName>Single Ascending Dose (SAD)</fullName>
                    <isActive>false</isActive>
                    <label>Single Ascending Dose (SAD)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Public_Health_Agency__c</fullName>
        <description>ESPSFDCQI-15685</description>
        <label>Global Public Health/Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Biofabri</fullName>
                </value>
                <value>
                    <fullName>CEPI</fullName>
                </value>
                <value>
                    <fullName>Children&apos;s Investment Foundation Fund (CIFF)</fullName>
                </value>
                <value>
                    <fullName>Canadian Institutes of Health</fullName>
                </value>
                <value>
                    <fullName>DNDI</fullName>
                </value>
                <value>
                    <fullName>Emergent BioSolutions</fullName>
                </value>
                <value>
                    <fullName>European &amp; Developing Countries Clinical Trials Partnership (EDCTP)</fullName>
                </value>
                <value>
                    <fullName>European Commission</fullName>
                </value>
                <value>
                    <fullName>Gates Foundation</fullName>
                </value>
                <value>
                    <fullName>Gates Medical Research Institute</fullName>
                </value>
                <value>
                    <fullName>GAVI</fullName>
                </value>
                <value>
                    <fullName>German Federal Ministry of Education and Research (BMBI)</fullName>
                </value>
                <value>
                    <fullName>Global Fund, The</fullName>
                </value>
                <value>
                    <fullName>IAVI</fullName>
                </value>
                <value>
                    <fullName>Institute Pasteur (multiple sites)</fullName>
                </value>
                <value>
                    <fullName>Instituto Butantan</fullName>
                </value>
                <value>
                    <fullName>International Vaccine Institute (IVI)</fullName>
                </value>
                <value>
                    <fullName>Larry Ellison Foundation</fullName>
                </value>
                <value>
                    <fullName>Medicines for Malaria Venture (MMV)</fullName>
                </value>
                <value>
                    <fullName>Medical Research Council (MRC)</fullName>
                </value>
                <value>
                    <fullName>NIH (US)</fullName>
                </value>
                <value>
                    <fullName>NHS/NIHR (UK)</fullName>
                </value>
                <value>
                    <fullName>Oswaldo Cruz Foundation (FioCruz)</fullName>
                </value>
                <value>
                    <fullName>PATH</fullName>
                </value>
                <value>
                    <fullName>Sabin Institute</fullName>
                </value>
                <value>
                    <fullName>Serum Institute of India</fullName>
                </value>
                <value>
                    <fullName>Swedish Research Council</fullName>
                </value>
                <value>
                    <fullName>TB Alliance</fullName>
                </value>
                <value>
                    <fullName>Tuberculosis Vaccine Initiative (TBVI)</fullName>
                </value>
                <value>
                    <fullName>United Nations (UN)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Public_Health__c</fullName>
        <description>ESPSFDCQI-15372</description>
        <label>Global Public Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Site_ID_Launch__c</fullName>
        <description>CRM-MC-ESPSFDCQI-889 - next gen</description>
        <label>Global Site ID Completed</label>
        <type>Date</type>
    </fields>
</CustomObject>